--- a/Popup/popup.css
+++ b/Popup/popup.css
@@ -5,6 +5,20 @@
   box-sizing: border-box;
 }
 
+
+.popup img {
+  width: 100px;
+  margin-top: -50px;
+  border-radius: 50%;
+  box-shadow: 0px 3px 4px rgb(46, 42, 252);
+}
+
+.popup h2 {
+  font-size: 48px;
+  font-weight: 500;
+  margin:  30px 0 10px;
+}
+
 .container {
   width: 100%;
   height: 100vh;
