--- a/Popup/popup.css
+++ b/Popup/popup.css
@@ -5,20 +5,6 @@
   box-sizing: border-box;
 }
 
-
-.popup img {
-  width: 100px;
-  margin-top: -50px;
-  border-radius: 50%;
-  box-shadow: 0px 3px 4px rgb(46, 42, 252);
-}
-
-.popup h2 {
-  font-size: 48px;
-  font-weight: 500;
-  margin:  30px 0 10px;
-}
-
 .container {
   width: 100%;
   height: 100vh;
@@ -55,4 +41,36 @@
   color: rgb(46, 42, 252);
   visibility: hidden;
   transition: transform 0.4s, top 0.4s;
+}
+
+.open-popup {
+  visibility: visible;
+  top: 50%;
+  transform: translate(-50%, -50%) scale(1);
+}
+
+.popup img {
+  width: 100px;
+  margin-top: -50px;
+  border-radius: 50%;
+  box-shadow: 0px 3px 4px rgb(46, 42, 252);
+}
+
+.popup h2 {
+  font-size: 48px;
+  font-weight: 500;
+  margin:  30px 0 10px;
+}
+
+.popup button {
+  width: 100%;
+  margin-top: 50px;
+  padding: 10px 0;
+  color: azure;
+  background: rgb(250, 77, 51);
+  box-shadow: 0px 2px 4px rgb(46, 42, 252);
+  border: 0;
+  border-radius: 50px;
+  font-size: 22px;
+  cursor: pointer;
 }
