--- a/Product/product.css
+++ b/Product/product.css
@@ -13,10 +13,23 @@
   align-items: center;
   justify-content: center;
 }
+
 .product {
   width: 90%;
   max-width: 750px;
   display: flex;
 }
 
+.gallery {
+  flex-basis: 47%;
+  background: #241e20;
+  transform: scale(1.08);
+  box-shadow: -10px 5px 10px 10px rgba(0,0,0,0.1);
+  position: relative;
+}
 
+.gallery img {
+  width: 100%;
+  display: block;
+  padding-top: 100px;
+}
