--- a/Product/product.css
+++ b/Product/product.css
@@ -13,7 +13,6 @@
   align-items: center;
   justify-content: center;
 }
-
 .product {
   width: 90%;
   max-width: 750px;
@@ -33,3 +32,15 @@
   display: block;
   padding-top: 100px;
 }
+
+.details {
+  flex-basis: 53%;
+  background: #fff;
+  padding: 40px;
+  padding-left: 60px;
+  box-shadow: -10px 5px 10px 10px rgba(0,0,0,0.1);
+  font-size: 13px;
+  font-weight: 500;
+  color: #777;
+}
+
