--- a/Product/product.css
+++ b/Product/product.css
@@ -114,3 +114,9 @@
 .color-2 {background: green;}
 .color-3 {background: blue;}
 .color-4 {background: hotpink;}
+
+
+.color-select input:checked + span {
+  transform: scale(0.7);
+  box-shadow: 0 0 0 4px #fff, 0 0 0 6px #000;
+}
