--- a/Qr-code-generator/qr-code.css
+++ b/Qr-code-generator/qr-code.css
@@ -20,3 +20,10 @@ body {
   border-radius: 10px;
   box-shadow: 7px 7px 2px rgb(70, 3, 85);
 }
+
+.container p {
+  font-weight: 300;
+  font-size: 25px;
+  margin-bottom: 8px;
+  color: rgb(48, 1, 44);
+}
