--- a/Qr-code-generator/qr-code.css
+++ b/Qr-code-generator/qr-code.css
@@ -46,3 +46,14 @@ body {
 .sp:hover {
   animation: zoomInAndOut 2s;
 }
+
+.container input {
+  background-color: rgba(212, 136, 249, 0.977);
+  width: 100%;
+  height: 50px;
+  border: 1px solid rgb(48, 1, 44);
+  outline: 0;
+  padding: 10px;
+  margin: 10px 0 20px;
+  border-radius: 5px;
+}
