--- a/Qr-code-generator/qr-code.css
+++ b/Qr-code-generator/qr-code.css
@@ -57,3 +57,17 @@ body {
   margin: 10px 0 20px;
   border-radius: 5px;
 }
+
+.container button {
+  font-size: 17px;
+  width: 100%;
+  height: 50px;
+  background: rgb(48, 1, 44);
+  color: rgba(212, 136, 249, 0.977);
+  border: 0;
+  outline: 0;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 20px 0;
+  font-weight: 500;
+}
