--- a/Qr-code-generator/qr-code.css
+++ b/Qr-code-generator/qr-code.css
@@ -85,3 +85,9 @@ body {
   width: 100%;
   padding: 10px;
 }
+
+#imgBox.show-img {
+  max-height: 300px;
+  margin: 10px auto;
+  border: 2px solid rgb(48, 1, 44);
+}
