--- a/Qr-code-generator/qr-code.css
+++ b/Qr-code-generator/qr-code.css
@@ -95,3 +95,21 @@ body {
 .error {
   animation: shake 0.1s linear 10;
 }
+
+@keyframes shake {
+  0%{
+    transform: translateX();
+  }
+  25%{
+    transform: translateX(-2px);
+  }
+  50%{
+    transform: translateX();
+  }
+  75%{
+    transform: translateX(2px);
+  }
+  100%{
+    transform: translateX();
+  }
+}
