--- a/Quiz/quiz.css
+++ b/Quiz/quiz.css
@@ -8,3 +8,12 @@
 body {
   background: palevioletred;
 }
+
+.app {
+  background: pink;
+  width: 90%;
+  max-width: 600px;
+  margin: 100px auto 0;
+  border-radius: 10px;
+  padding: 30px;
+}
