--- a/Quiz/quiz.css
+++ b/Quiz/quiz.css
@@ -17,3 +17,11 @@ body {
   border-radius: 10px;
   padding: 30px;
 }
+
+.app h1 {
+  font-size: 45px;
+  color: rgb(210, 34, 92);
+  font-weight: 600;
+  border-bottom: 1px solid #333;
+  padding-bottom: 30px;
+}
