--- a/Quiz/quiz.css
+++ b/Quiz/quiz.css
@@ -25,3 +25,10 @@ body {
   border-bottom: 1px solid #333;
   padding-bottom: 30px;
 }
+
+
+.quiz h2 {
+  font-size: 20px;
+  font-weight: 600;
+  color: rgb(127, 5, 46);
+}
