--- a/Quiz/quiz.css
+++ b/Quiz/quiz.css
@@ -35,3 +35,18 @@ body {
   font-weight: 600;
   color: rgb(127, 5, 46);
 }
+
+.btn {
+  background:rgba(254, 226, 236, 0.995);
+  color: rgb(127, 5, 46);
+  font-weight: 500;
+  width: 100%;
+  border: 1px solid #333;
+  padding: 10px;
+  margin: 10px 0;
+  text-align: left;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: all 0.3s;
+  font-size: 16px;
+}
