--- a/Quiz/quiz.css
+++ b/Quiz/quiz.css
@@ -50,3 +50,12 @@ body {
   transition: all 0.3s;
   font-size: 16px;
 }
+
+.btn:hover:not([disabled]) {
+  color:rgb(254, 226, 236);
+  background: rgb(127, 5, 46);
+}
+
+.btn:disabled {
+  cursor: no-drop;
+}
